# openpic

./: .gitignore
PicSharp/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
PicSharp/.github/ISSUE_TEMPLATE/: report-bug.md
PicSharp/apps/picsharp-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
PicSharp/apps/picsharp-app/scripts/: dev-with-wait.mjs
PicSharp/apps/picsharp-app/src/: App.tsx  constants.ts  index.css  main.tsx  routes.tsx  vite-env.d.ts
PicSharp/apps/picsharp-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
PicSharp/apps/picsharp-app/src-tauri/capabilities/: default.json  desktop.json
PicSharp/apps/picsharp-app/src-tauri/icons/: icon.icns
PicSharp/apps/picsharp-app/src-tauri/resources/: AppxManifest.xml  settings.default.json
PicSharp/apps/picsharp-app/src-tauri/sparse-package/: README.md
PicSharp/apps/picsharp-app/src-tauri/src/: clipboard.rs  command.rs  file.rs  lib.rs  main.rs  stream.rs  tinify.rs  window.rs
PicSharp/apps/picsharp-app/src-tauri/src/file_ext/: finder.rs
PicSharp/apps/picsharp-app/src-tauri/src/image_processor/: common.rs
PicSharp/apps/picsharp-app/src-tauri/src/macos/: traffic_light.rs
PicSharp/apps/picsharp-app/src/components/: background-pattern.tsx  checkbox-group.tsx  context-menu.tsx  dropdown-button.tsx  error-boundary.tsx  fullscreen-progress.tsx  link.tsx  path-tags-input.tsx
PicSharp/apps/picsharp-app/src/components/animated-icon/: folder.tsx  quetion.tsx  upload-widget.tsx
PicSharp/apps/picsharp-app/src/components/data-table/: data-table-faceted-filter.tsx
PicSharp/apps/picsharp-app/src/components/image-viewer/: index.tsx
PicSharp/apps/picsharp-app/src/components/layouts/: app-layout.tsx  header.tsx  sidebar-nav.tsx
PicSharp/apps/picsharp-app/src/components/message/: index.tsx
PicSharp/apps/picsharp-app/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  cog.tsx  context-menu.tsx  dialog.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
PicSharp/apps/picsharp-app/src/extends/: CompressError.ts
PicSharp/apps/picsharp-app/src/hooks/: useNavigate.ts  useReport.ts
PicSharp/apps/picsharp-app/src/i18n/locales/: en-US.ts  zh-CN.ts
PicSharp/apps/picsharp-app/src/pages/compression/: classic-file-manager.tsx  classic-guide.tsx  classic-redirect.tsx  common-hints-section.tsx  compression-options-card.tsx  file-card.tsx  index.tsx  toolbar-compress.tsx  toolbar-exit.tsx  toolbar-info.tsx  toolbar.tsx  watch-add-mode-dialog.tsx  watch-feature-panels.tsx  watch-file-manager.tsx  watch-folder-card.tsx  watch-folder-list.tsx  watch-folder-settings-dialog.tsx  watch-guide.tsx  watch-redirect.tsx  watch.tsx
PicSharp/apps/picsharp-app/src/store/: app.ts  compression.ts  convert.ts  resize.ts  settings.ts  watermark.ts  withStorageDOMEvents.ts
PicSharp/apps/picsharp-app/src/types/: global.d.ts
PicSharp/apps/picsharp-app/src/utils/: apm.ts  clipboard.ts  compressor.ts  fs.ts  index.ts  menu.ts  report.ts  resize.ts  tray.ts  updater.ts  watch-utils.ts  watermark.ts  window.ts
PicSharp/apps/picsharp-shell-command/: Cargo.toml  README.md
PicSharp/apps/picsharp-shell-command/src/: lib.rs
PicSharp/docs/: ARCHITECTURE.md  CODE_STYLE.md  I18N_GUIDE.md  PRODUCT_SPEC.md
VeryPic/: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
VeryPic/.github/workflows/: release.yml
VeryPic/apps/verypic-app/: index.html  package.json  release-notes.json  tailwind.config.js  tsconfig.json  vite.config.ts
VeryPic/apps/verypic-app/scripts/: postbuild-smokecheck.mjs  rename-installer.mjs
VeryPic/apps/verypic-app/src/: App.tsx  constants.ts  index.css  routes.tsx  vite-env.d.ts
VeryPic/apps/verypic-app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
VeryPic/apps/verypic-app/src-tauri/capabilities/: default.json  desktop.json
VeryPic/apps/verypic-app/src-tauri/icons/: icon.icns
VeryPic/apps/verypic-app/src-tauri/resources/: AppxManifest.xml
VeryPic/apps/verypic-app/src-tauri/sparse-package/: README.md
VeryPic/apps/verypic-app/src-tauri/src/: archive_import.rs  clipboard.rs  command.rs  file.rs  inspect.rs  lib.rs  main.rs  tinify.rs  upload.rs  window.rs
VeryPic/apps/verypic-app/src/components/: sidecar-error-toast.tsx  theme-provider.tsx  window-control.tsx
VeryPic/apps/verypic-app/src/components/ui/: badge.tsx  (+10 more)
VeryPic/apps/verypic-app/src/extends/: SidecarError.ts  UpdateError.ts
VeryPic/apps/verypic-app/src/hooks/: useSelector.ts
VeryPic/apps/verypic-app/src/i18n/: index.ts
VeryPic/apps/verypic-app/src/store/: app.ts  compression.ts  trafficLight.ts  watermark.ts  workflow.ts
VeryPic/apps/verypic-app/src/utils/: NativeCompressor.ts  apm.ts  compressor.ts  convert.ts  fs-watch.ts  fs.ts  guide-import-paths.ts  index.ts  launch.ts  logger.ts  menu.ts  notification.ts  platform.ts  scheduler.ts  tinify.ts  tray.ts  watermark.ts  window.ts
VeryPic/apps/verypic-shell-command/: Cargo.toml  README.md
VeryPic/apps/verypic-shell-command/src/: lib.rs
VeryPic/docs/: ARCHITECTURE.md  CODE_STYLE.md  I18N_GUIDE.md  PRODUCT_SPEC.md
(+128 files in other folders)
