[workspace]
members = [
  "apps/verypic-app/src-tauri",
  "apps/verypic-shell-command",
]
resolver = "2"

[workspace.package]
authors = ["JaylenLee117"]
license = "AGPL-3.0"
homepage = "https://github.com/a869642521/openpic"
repository = "https://github.com/a869642521/openpic"
categories = []
edition = "2021"
rust-version = "1.82.0"