[package]
name = "picsharp-shell-command"
version = "0.1.0"
description = "Windows 11 IExplorerCommand COM extension for PicSharp context menu"
edition = "2021"
authors = ["JaylenLee117"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
